<resources>
    <string name="app_name">Random Number Generator</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="you_rolled">You rolled</string>
    <string name="tap_to_roll_a_die">Tap to roll a die</string>
    <string name="tap_to_roll_again">Tap to roll again</string>
    <string name="spinning">Spinning</string>
    <string name="rolling">Rolling</string>
    <string name="tap_to_roll_2_dice">Tap to roll 2 dice</string>
    <string name="tap_to_spin_a_wheel">Tap to spin a wheel</string>
    <string name="and"><![CDATA[&]]></string>
    <string name="double_roll">Double!</string>
    <string name="tap_to_spin_again">Tap to spin again</string>
    <string name="you_spinned">You spinned</string>
    <string name="random_number">Random Number</string>
    <string name="generator">Generator</string>
    <string name="roll_a_die">Roll a die</string>
    <string name="_1_6">1-6</string>
    <string name="roll_2_die">Roll 2 die</string>
    <string name="_2_12">2-12</string>
    <string name="spin_a_wheel">Spin a wheel</string>
    <string name="select_a_range">Select a range</string>
    <string name="to">to</string>
    <string name="spin">SPIN</string>
</resources>