<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="com.yashovardhan99.rangen.SelectViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:onClick="@{v->viewmodel.onBackPressed()}"
            android:padding="16dp"
            app:cornerRadius="16dp"
            app:icon="@drawable/ic_baseline_arrow_back_ios_24"
            app:iconGravity="end"
            app:iconSize="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:showIn="@layout/fragment_spin" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="56dp"
            android:background="?attr/colorSurface"
            tools:context=".SelectFragment">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/single_die_card"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_marginStart="@dimen/startendmargin"
                    android:layout_marginTop="@dimen/startendmargin"
                    android:layout_marginEnd="@dimen/startendmargin"
                    android:elevation="4dp"
                    android:onClick="@{v->viewmodel.goToSingleDie()}"
                    app:cardCornerRadius="@dimen/cardcorner_radius">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="3dp"
                        android:fontFamily="@font/roboto_light"
                        android:text="@string/roll_a_die"
                        android:textAllCaps="true"
                        android:textSize="@dimen/cardmaintextsize" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal|bottom"
                        android:layout_marginBottom="22dp"
                        android:fontFamily="@font/roboto_light"
                        android:text="@string/_1_6"
                        android:textSize="12sp" />
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/two_dice_card"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_marginStart="@dimen/startendmargin"
                    android:layout_marginTop="@dimen/startendmargin"
                    android:layout_marginEnd="@dimen/startendmargin"
                    android:elevation="4dp"
                    android:onClick="@{v->viewmodel.goToDoubleDice()}"
                    app:cardCornerRadius="@dimen/cardcorner_radius">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="3dp"
                        android:fontFamily="@font/roboto_light"
                        android:text="@string/roll_2_die"
                        android:textAllCaps="true"
                        android:textSize="@dimen/cardmaintextsize" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal|bottom"
                        android:layout_marginBottom="22dp"
                        android:fontFamily="@font/roboto_light"
                        android:text="@string/_2_12"
                        android:textSize="12sp" />
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/spin_wheel_card"
                    android:layout_width="match_parent"
                    android:layout_height="315dp"
                    android:layout_margin="@dimen/startendmargin"
                    android:elevation="4dp"
                    android:onClick="@{v->viewmodel.goToSpin()}"
                    app:cardCornerRadius="@dimen/cardcorner_radius">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="top|center_horizontal"
                        android:layout_marginTop="22dp"
                        android:layout_marginBottom="3dp"
                        android:fontFamily="@font/roboto_light"
                        android:text="@string/spin_a_wheel"
                        android:textAllCaps="true"
                        android:textSize="@dimen/cardmaintextsize" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal|top"
                        android:layout_marginTop="81dp"
                        android:fontFamily="@font/roboto_light"
                        android:text="@string/select_a_range"
                        android:textSize="16sp" />

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|start"
                        android:layout_marginStart="80dp"
                        android:gravity="center_horizontal">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/start_text"
                            android:layout_width="50dp"
                            android:layout_height="wrap_content"
                            android:importantForAutofill="no"
                            android:inputType="number"
                            android:text="@={viewmodel.start}"
                            android:textAlignment="center" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|end"
                        android:layout_marginEnd="80dp"
                        android:gravity="center_horizontal">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/end_text"
                            android:layout_width="50dp"
                            android:layout_height="wrap_content"
                            android:importantForAutofill="no"
                            android:inputType="number"
                            android:text="@={viewmodel.end}"
                            android:textAlignment="center" />

                    </com.google.android.material.textfield.TextInputLayout>


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/to"
                        android:textSize="20sp" />

                    <com.google.android.material.button.MaterialButton
                        style="@style/Widget.MaterialComponents.Button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom|center_horizontal"
                        android:layout_marginBottom="42dp"
                        android:onClick="@{v->viewmodel.goToSpin()}"
                        android:text="@string/spin"
                        app:cornerRadius="@dimen/cardcorner_radius" />
                </com.google.android.material.card.MaterialCardView>
            </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
